--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/Icon.webp" />
+    <link rel="icon" type="image/x-icon" href="/favicon_light.ico" id="favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">
-    <title>Malitix</title>
+    <title>Malitix | Excellence technologique, innovation continue</title>
+
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5113a1f4-3030-41b7-8aca-f38011178575" data-blockingmode="auto" type="text/javascript"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XGEFD1FDRZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XGEFD1FDRZ');
+    </script>
   </head>
   <body>
     <div id="root"></div>
