correct icon size for google indexation

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon_light.ico" id="favicon" />
+    <link rel="icon" type="image/x-icon" href="/malitix_light.ico" id="favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">
     <title>Malitix | Excellence technologique, innovation continue</title>
