--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/malitix_light.ico" id="favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Preload main stylesheet (non-blocking) and provide noscript fallback -->
-    <link rel="preload" href="/src/index.css" as="style" onload="this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="/src/index.css"></noscript>
-
-    <!-- Critical CSS (minimal above-the-fold styles) -->
-    <style>
-      :root{--color-dark:#060705;--font-sans:system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif}
-      *{scroll-behavior:smooth}
-      body{font-family:var(--font-sans);overflow-x:hidden;background-color:var(--color-dark);color:#fff}
-    </style>
-    
+    <link href="/src/index.css" rel="stylesheet">
     <title>Malitix | Excellence technologique, innovation continue</title>
 
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5113a1f4-3030-41b7-8aca-f38011178575" data-blockingmode="auto" type="text/javascript"></script>
