--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/malitix_light.ico" id="favicon" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" id="favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Preload main stylesheet (non-blocking) and provide noscript fallback -->
     <link rel="preload" href="/src/index.css" as="style" onload="this.rel='stylesheet'">
