--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
 
       gtag('config', 'G-XGEFD1FDRZ');
     </script>
+
+      <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11480258743">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-11480258743');
+  </script>
+
   </head>
   <body>
     <div id="root"></div>
