--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
+      gtag('config', 'AW-11480258743');
       gtag('config', 'G-XGEFD1FDRZ');
+      
     </script>
   </head>
   <body>
