corrected head title element on different routes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Malitix | Excellence technologique, innovation continue</title>
+    <meta name="description" content="Solutions innovantes en développement web, cloud et transformation digitale" />
     <link href="/src/index.css" rel="stylesheet">
-
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5113a1f4-3030-41b7-8aca-f38011178575" data-blockingmode="auto" type="text/javascript"></script>
 
     <script data-cookieconsent="ignore">
