Switched to CookieYes CMP

--- a/index.html
+++ b/index.html
@@ -25,40 +25,9 @@
           gtag("set", "ads_data_redaction", true);
           gtag("set", "url_passthrough", false);
         </script>
-    <script src="https://cc.cdn.civiccomputing.com/9/cookieControl-9.x.min.js"></script>
-    <script>
-      var config = {
-        apiKey: '7c16bb25490d19b5d44d74997f6c71e56f08308b',
-        product: 'community',
-        optionalCookies: [
-          {
-            name: 'analytics',
-            label: 'Analytics',
-            description: '',
-            cookies: [],
-            onAccept : function(){},
-            onRevoke: function(){}
-          },{
-            name: 'marketing',
-            label: 'Marketing',
-            description: '',
-            cookies: [],
-            onAccept : function(){},
-            onRevoke: function(){}
-          },{
-            name: 'preferences',
-            label: 'Preferences',
-            description: '',
-            cookies: [],
-            onAccept : function(){},
-            onRevoke: function(){}
-          }
-        ],
-        position: 'RIGHT',
-        theme: 'DARK'
-      };
-      CookieControl.load( config );
-    </script>
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/8c7b194ddfb209c75d3cbd84ee02b13f/script.js"></script>
+    <!-- End cookieyes banner -->
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
