--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Malitix | Excellence technologique, innovation continue</title>
     <meta name="description" content="Solutions innovantes en développement web, cloud et transformation digitale" />
+
+    <title>Malitix | Excellence technologique, innovation continue</title>
+    
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link href="/src/index.css" rel="stylesheet">
+    <link rel="preload" as="image" href="/mx_light.webp" />
+    <link rel="preload" as="image" href="/mx_dark.webp" />
         <script data-cookieconsent="ignore">
           window.dataLayer = window.dataLayer || [];
           function gtag() {
@@ -68,6 +72,7 @@
     </script>
 
   </head>
+
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTH9CRZ4"
@@ -76,4 +81,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  
 </html>
